<resources>
    <string name="top_headlines_button">Top Headlines</string>
    <string name="news_sources_button">News Sources</string>
    <string name="countries_button">Countries</string>
    <string name="languages_button">Languages</string>
    <string name="search_button">Search</string>
    <string name="news_sources">News Sources</string>
    <string name="countries">Countries</string>
    <string name="languages">Languages</string>
    <string name="app_name">NewsApp</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong</string>

</resources>